--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "description": "Elegant profile README with daily cartoon (Studio Ghibli), snake contributions, and clean metrics",
+  "description": "Elegant profile README with daily cartoon (Studio Ghibli), snake contributions, and clean metrics for maarrdamarr",
   "license": "MIT"
 }
